--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 </nav> 
      <div class="container">
-        <div class="row">
+        <div class="row nav011">
             <div class="col-md-12 nav1">
                 <h1>Your Trusted <span>Software Development Company</span>- Teciz Everything</h1>
                 <p>Teciz Everything is a trusted software development company renowned for its excellence in delivering top-notch solutions. With a team of skilled technicians, we provide premium services and are committed to delivering high-grade outcomes that meet your business needs.</p>
@@ -382,9 +382,11 @@
 
     <div class="container">
         <div class="row nav33">
-            <div class="col-md-12 nav33">
+            <div class="col-md-3 nav33"></div>
+            <div class="col-md-6 nav33">
                <img src="images/img28.jpg">
            </div>
+           <div class="col-md-3 nav33"></div>
        </div>
    </div>
 
