--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
             <div class="col-md-12 nav18">
                 <h1>Avail of our Software Development Services Today and Get 50% Off!</h1>
                 <p>Our talented web developers and IT consultants are eager to work with you. Connect with us today!</p>
+                <div class="nav013">
                 <a class="btn01 btn btn-primary" href="">Get a free Demo</a>
            </div>
        </div>
@@ -314,17 +315,23 @@
             <div class="col-md-4 nav27">
                <h1>Why <span>Us?</span></h1>
                <p>We’re committed to staying prior and curve and we’re fulfilling and developing new skills, and trends techniques to ensure amazing results for our clients.</p>
+               <div class="nav014">
                <a href="" class="btn6 btn btn-primary">DISCOVER MORE</a>
+           </div>
            </div>
            <div class="col-md-4 nav27">
               <h1>Technology <span>Services</span></h1>
                <p>Our highly skilled team accelerates innovation and creates new revenue streams, through our unique engagement method, you’ll be informed at every step of the way.</p>
+               <div class="nav014">
                <a href="" class="btn6 btn btn-primary">DISCOVER MORE</a>
+           </div>
            </div>
            <div class="col-md-4 nav27">
               <h1>Company <span>Profile</span></h1>
                <p>We work at the highest standards to deliver the best results and create technology-backed business solutions for clients ensuring that they get the maximum value from their investment.</p>
+               <div class="nav014">
                <a href="" class="btn6 btn btn-primary">DISCOVER MORE</a>
+           </div>
            </div>
        </div>
    </div>
@@ -349,7 +356,6 @@
                  <h2>Your message (Required)</h2>
                  <input type="Name" name="">
                  </div>
-                 <img src="images/img26.jpg"><br>
                  <a href="" class="btn7 btn btn-primary">Submit</a>
         </div>
         <div class="col-md-1 nav29"></div>
