--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <body>
+    <div id="custom-cursor"></div>
 
         <div class="row">
             <div class="col-md-12 nav01">
@@ -576,6 +578,18 @@
     }
 
     animateNumbers();
+});
+
+</script>
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function() {
+  document.body.style.cursor = "default"; /* Hide the default cursor */
+  
+  document.addEventListener("mousemove", function(e) {
+    const customCursor = document.getElementById("custom-cursor");
+    customCursor.style.left = e.pageX + "px";
+    customCursor.style.top = e.pageY + "px";
+  });
 });
 
 </script>
