--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p>We are Teciz Everything, a reliable partner in helping you achieve digital success. Our team of experts combines technical knowledge with a customer-focused approach to ensure your business thrives in the digital world. Our commitment to innovation and exceptional service means we provide high-quality solutions that yield positive results.</p>
                 <a href="" class="btn btn-primary">Call Us to Discuss Your Needs!</a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 nav005">
                 <div class="nav5">
                     <img src="images/img2.jpg">
                     <h1 id="numbereed">12</h1>
@@ -78,7 +78,7 @@
                     <p>Apps<br>Developed</p>
                 </div>
             </div>
-            <div class="col-md-2 ">
+            <div class="col-md-2 nav006">
                 <div class="nav7">
                     <img src="images/img3.jpg">
                     <h1 id="numberes">250+</h1>
@@ -90,7 +90,7 @@
                     <p>Client<br>Satisfaction</p>
                 </div>
             </div>
-            <div class="col-md-2 ">
+            <div class="col-md-2 nav007">
                 <div class="nav9">
                     <img src="images/img4.jpg">
                     <h1 id="numbered">100%</h1>
@@ -385,7 +385,7 @@
             <div class="col-md-3 nav32">
                <h1>Get a free technical proposal for your Apps</h1>
                <p>Developing your app at the earliest!</p>
-               <a href="" class="btn8 btn btn-primary">Request a Quote</a>
+               <a href="index1.html" class="btn8 btn btn-primary">Request a Quote</a>
     </div> 
 
     <div class="container">
